# middleware/auth.js
@@ -2,15 +2,24 @@ const jwt = require('jsonwebtoken');
 
 // Middleware xác thực access token
 function authenticateToken(req, res, next) {
+    // Lấy token từ header Authorization
     const authHeader = req.headers['authorization'];
-    const token = authHeader && authHeader.split(' ')[1]; // Lấy token từ header
-    if (token == null) return res.sendStatus(401); // Không có token
+    const token = authHeader && authHeader.split(' ')[1]; // Tách token
 
-    jwt.verify(token, process.env.ACCESS_TOKEN_SECRET, (err, user) => {
-        if (err) return res.sendStatus(403); // Token không hợp lệ
-        req.user = user;
+    if (!token) {
+        return res.status(401).json({ success: false, message: "Token không tồn tại." }); // Không có token
+    }
+
+    jwt.verify(token, process.env.accessTokenSecret, (err, user) => {
+        if (err) {
+            // Kiểm tra lỗi và trả về mã lỗi chi tiết
+            return res.status(403).json({ success: false, message: "Token không hợp lệ hoặc đã hết hạn." }); // Token không hợp lệ
+        }
+
+        req.user = user; // Gán thông tin người dùng
         next(); // Cho phép request tiếp tục
     });
+    
 }
 
 module.exports = { authenticateToken };
